Solucionada advertencia con PHP 8.1 y actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -3,7 +3,7 @@
     "about": "O nas",
     "accept": "Zaakceptować",
     "accept-all": "Akceptuj wszystko",
-    "accept-data": "Aceptar cambios u operación",
+    "accept-data": "Akceptować zmiany lub operację",
     "accept-privacy-policy": "Acepta la política de privacidad",
     "accepted": "Aceptado",
     "accepts-emails-commas": "Akceptuje wiele adresów e-mail oddzielonych przecinkami",
@@ -46,7 +46,7 @@
     "accounts": "Konta",
     "accrual-date": "Fecha devengo",
     "action": "Działanie",
-    "actions": "Acciones",
+    "actions": "Akcje",
     "active": "Aktywny",
     "actual-cost-price": "Rzeczywista cena zakupu",
     "add": "Dodaj",
@@ -85,7 +85,7 @@
     "allow-marketing": "Zezwalaj na marketing",
     "allow-post-data": "Zezwól na MODYFIKACJĘ",
     "allow-put-data": "Zezwól na DODAWANIE",
-    "allow-sale-without-stock": "Permitir venta sin stock",
+    "allow-sale-without-stock": "Zezwól na sprzedaż bez stanu magazynowego",
     "allow-sale-without-stock-n": "Zezwól na sprzedaż bez zapasów w nowych produktach",
     "allow-update": "Zezwól na modyfikację",
     "always-to-company-email": "Zawsze na email firmy",
@@ -144,7 +144,7 @@
     "balance-account": "Bilans kont",
     "balance-account-abreviated": "Zrównoważony skrót konta",
     "balance-amounts": "Bilans sum i sald",
-    "balance-sheet": "Balance de Situación",
+    "balance-sheet": "Bilans",
     "balance-sheets": "Bilansy",
     "balances": "Bilansy",
     "bank-account": "Konto bankowe",
@@ -164,9 +164,9 @@
     "blocked": "Zablokowany",
     "blocked-date": "Data blokady",
     "body": "Treść",
-    "book": "Reservar",
+    "book": "Rezerwuj",
     "box-closed-ok": "Kasa została prawidłowo zamknięta",
-    "boxes": "Cajas",
+    "boxes": "Pudełka",
     "browse": "Examinar",
     "business-name": "Nazwa firmy",
     "buy": "Kupować",
@@ -177,8 +177,8 @@
     "calculated-surcharge-diff": "Znaleziono różnicę podczas obliczania opłaty równowartości. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Znaleziono różnicę podczas obliczania całkowitego VATu. %tax% VS %tax2%",
     "calculation": "Obliczenie",
-    "calendar": "Calendario",
-    "can-not-open-zip-file": "No puedo abrir archivo zip '%zipFile%'",
+    "calendar": "Kalendarz",
+    "can-not-open-zip-file": "Nie mogę otworzyć pliku zip '%zipFile%'",
     "cancel": "Anuluj",
     "cancel-data": "Anuluj zmiany lub operację",
     "cancelled": "Anulowane",
@@ -212,7 +212,7 @@
     "card": "Karta",
     "carrier": "Przewoźnik",
     "carriers": "Przewoźnicy",
-    "cash": "Efectivo",
+    "cash": "Gotówka",
     "categories": "Kategorie",
     "category": "Kategoria",
     "cc": "CC",
@@ -221,7 +221,7 @@
     "channel": "Kanał",
     "charge-date": "Data obciążenia",
     "chart": "Wykres",
-    "charts": "Gráficos",
+    "charts": "Wykresy",
     "chat": "Chat",
     "check-table": "Błąd podczas sprawdzania tabeli '%tableName%'",
     "check-vies": "Sprawdź VIES",
@@ -261,7 +261,7 @@
     "color-info": "Informacja o kolorze",
     "color-light": "Kolor światła",
     "color-primary": "Kolor podstawowy",
-    "color-secondary": "Color secundario",
+    "color-secondary": "Kolor dodatkowy",
     "color-success": "Kolor sukcesu",
     "color-warning": "Kolor ostrzeżenia",
     "colors": "Kolory",
@@ -276,7 +276,7 @@
     "commissions": "Comisiones",
     "common-data": "Dane wspólne",
     "common-error": "Błąd",
-    "companies": "Empresas",
+    "companies": "Firmy",
     "company": "Firma",
     "company-commission-info": "Będzie stosowane tylko do wybranej firmy",
     "company-manager": "Administrator firmy",
@@ -384,7 +384,7 @@
     "date-of-suspension": "Data zawieszenia",
     "date-of-the-document": "Data dokumentu do wygenerowania",
     "date-out": "Data wyjścia",
-    "date-out-of-exercise-range": "La fecha está fuera del rango del ejercicio %exerciseName%",
+    "date-out-of-exercise-range": "Data wykracza poza zakres ćwiczenia %exerciseName%",
     "date-wildcard-info": "Bieżąca data (data z komputera)",
     "dateentry-wildcard-info": "Data wskazana w nagłówku wpisu księgowego",
     "day": "Dzień",
@@ -431,7 +431,7 @@
     "desc": "Opis",
     "desc-alfa-code-2": "Oficjalna identyfikacja dla nazw krajów i innych jednostek administracyjnych",
     "desc-alfa-code-3": "Oficjalna identyfikacja dla nazw krajów i innych jednostek administracyjnych",
-    "desc-business-name": "Nombre oficial del cliente, para las facturas y otros documentos.",
+    "desc-business-name": "Oficjalna nazwa klienta na fakturach i innych dokumentach.",
     "desc-business-name-2": "Nazwa fiskalna lub prawnie zarejestrowana klienta",
     "desc-customer-name": "Nazwa, pod którą klient jest znany. Do użytku wewnętrznego.",
     "desc-parent-family": "Wskaż, czy rodzina jest zgrupowana na wyższym poziomie.",
@@ -470,7 +470,7 @@
     "doc-type": "Typ dokumentu",
     "document": "Dokument",
     "document-configuration": "Konfiguracja dokumentów",
-    "document-report": "Informe de documentos",
+    "document-report": "Raport dokumentów",
     "document-sequence": "Sekwencja dokumentu",
     "document-sequences": "Sekwencje dokumentów",
     "document-states": "Stany dokumentu",
@@ -479,19 +479,19 @@
     "document-wildcard-info": "Dokument wskazany w nagłówku wpisu księgowego",
     "document-without-total": "Dokument %document% bez sumy lub z sumą równą 0.",
     "documentation": "Dokumentacja",
-    "documents": "Documentos",
+    "documents": "Dokumenty",
     "documents-generated": "Wygenerowane dokumenty",
     "domiciled": "Zamieszkały",
     "done": "Zrealizowane",
     "done-date": "Data zakończenia",
     "dont-sell-above-pvp": "Nie sprzedawaj powyżej PVP",
-    "dont-sell-below-cost": "No vender por debajo de coste",
+    "dont-sell-below-cost": "Nie sprzedawaj poniżej kosztu",
     "download": "Pobierz",
     "download-completed": "Pobieranie zakończone",
     "download-error": "Błąd podczas pobierania. Kod %status% - %error%",
     "download-xml": "Descargar XML",
     "downloads": "Pobrania",
-    "drag": "Arrastrar",
+    "drag": "Przeciągnij",
     "dto": "Dto.",
     "dto-2": "Dto. 2",
     "duplicate-record": "Duplikat rekordu",
@@ -559,11 +559,11 @@
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Rolnictwo, hodowla zwierząt i rybołówstwo",
-    "es-tax-regime-exempt": "Exento",
+    "es-tax-regime-exempt": "Zwolnione",
     "es-tax-regime-general": "Reżim ogólny",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
-    "es-tax-regime-simplified": "Régimen simplificado",
+    "es-tax-regime-simplified": "Reżim uproszczony",
     "es-tax-regime-surcharge": "Dopłata równoważna",
     "es-tax-regime-telecom": "Regímenes especiales de telecomunicaciones, radiodifusión o televisión y otros",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
@@ -622,7 +622,7 @@
     "filter-method": "Metoda filtracji",
     "filter-records-containing-indicated-value": "Filtruj rekordy zawierające wartość",
     "filters": "Filtry",
-    "finalize": "Finalizar",
+    "finalize": "Zakończ",
     "find-problems": "Znaleźć problemy",
     "finished": "Finalizado",
     "finished-cron": "Zakończono wykonywanie crona. Zużyty czas: %timeNeeded% sekund, Pamięć: %memoryUsed%",
@@ -633,7 +633,7 @@
     "fiscal-exercise": "Ejercicio fiscal",
     "fiscal-id": "Id. Fiskalny",
     "fiscal-number": "Numer fiskalny",
-    "fixed-value": "Valor fijo",
+    "fixed-value": "Wartość stała",
     "flag": "Flaga",
     "folder-not-writable": "Nie można zapisać w folderze FacturaScripts.",
     "font": "Czcionka",
@@ -676,7 +676,7 @@
     "generated-accounting-entries": "Wygenerowano %quantity% wpisów księgowych.",
     "generated-accounts": "%quantity% wygenerowanych kont księgowych.",
     "generated-agents": "Wygenerowano %quantity% agentów.",
-    "generated-at": "Generado el %when%",
+    "generated-at": "Wygenerowano %when%",
     "generated-contacts": "Wygenerowano %quantity% kontaktów.",
     "generated-customer-delivery-notes": "Wygenerowano %quantity% faktur sprzedaży.",
     "generated-customer-estimations": "Wygenerowano %quantity% oszacowań klientów.",
@@ -756,7 +756,7 @@
     "in-stock": "Na magazynie",
     "inactive": "Nieaktywny",
     "income-and-expenses": "Przychody i wydatki",
-    "incompatible-document": "Documento incompatible: %code%. Para poder agrupar documentos deben tener el mismo cliente o proveedor, serie, almacén, divisa y descuento global.",
+    "incompatible-document": "Dokument niezgodny: %code%. Aby móc grupować dokumenty, muszą mieć tego samego klienta lub dostawcę, serię, magazyn, walutę i łączne rabaty.",
     "incompatible-with-facturascripts": "Niekompatybilne z wersją %version% FacturaScripts",
     "incorrect-accounting-amount": "Kwota księgowania jest błędna.",
     "info": "Informacje",
@@ -766,7 +766,7 @@
     "installed": "Zainstalowane",
     "installed-plugins": "Zainstalowane",
     "installer": "Instalador",
-    "installer-p": "Bienvenido al instalador de FacturaScripts. Rellena los campos necesarios para conectar a la base de datos.",
+    "installer-p": "Witamy w instalatorze FacturaScripts. Wypełnij wymagane pola, aby połączyć się z bazą danych.",
     "installer-requirements": "Następujące rozszerzenia i funkcje są wymagane w FacturaScripts:",
     "integrity-check": "Kontrola integralności",
     "integrity-check-help": "To jest sprawdzenie integralności systemu, opisane jako",
@@ -829,7 +829,7 @@
     "languages-ca_ES": "Catalán",
     "languages-cs_CZ": "Checo",
     "languages-de_DE": "Niemiecki",
-    "languages-en_EN": "Inglés",
+    "languages-en_EN": "Angielski",
     "languages-es_AR": "Hiszpański (Argentyna)",
     "languages-es_CL": "Espanol (Chile)",
     "languages-es_CO": "Hiszpański (Kolumbia)",
@@ -880,7 +880,7 @@
     "library": "Biblioteka",
     "license": "Licencja",
     "like-than": "Tak jak",
-    "line": "Línea",
+    "line": "Linia",
     "lines": "Linie",
     "linux": "Linux",
     "list": "Lista",
@@ -896,8 +896,8 @@
     "log": "Dziennik",
     "login": "Zaloguj się",
     "login-cookie-fail": "Nieprawidłowy ciasteczko logowania",
-    "login-image": "Imagen de login",
-    "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
+    "login-image": "Obrazek logowania",
+    "login-ok": "Sesja została pomyślnie uruchomiona (ciasteczko). Użytkownik: '%nick%'",
     "login-password-fail": "Użytkownik lub hasło są niepoprawne",
     "login-text": "Wpisz swoją nazwę użytkownika i hasło, aby się zalogować",
     "login-to-continue": "Zaloguj się, aby kontynuować",
@@ -948,7 +948,7 @@
     "memcache-prefix": "Prefiks Memcache",
     "memcache-set-key-item": "Przypisano element '%item%' do Memcache.",
     "menu": "Menu",
-    "message": "Mensaje",
+    "message": "Wiadomość",
     "messages-component-title": "Komunikaty i wiadomości",
     "meta-description": "FacturaScripts to oprogramowanie do fakturowania i księgowości dla małych i średnich przedsiębiorstw. Jest to oprogramowanie wolne na licencji GNU\/LGPL.",
     "method-payment": "Metoda płatności",
@@ -1128,7 +1128,7 @@
     "pending-invoices-button": "Fakt. Ptes:",
     "pending-orders-button": "Zamów. Pts:",
     "pending-reception": "Oczekujący odbiór",
-    "percentage": "Porcentaje",
+    "percentage": "Procent",
     "percentage-commission": "% Prowizja",
     "percentage-discount": "% Rabatu",
     "percentage-surcharge": "% R.E.",
@@ -1228,7 +1228,7 @@
     "quantity-abb": "Ilość",
     "quantity-remaining": "Pozostała ilość",
     "quantity-served": "Ilość wydana",
-    "quantity-sold": "Cant. vendida",
+    "quantity-sold": "Ilość sprzedana",
     "randomizer-generating-more-items": "Generowanie dodatkowych elementów...",
     "rate": "Stawka",
     "rates": "Stawki",
@@ -1250,7 +1250,7 @@
     "record-save-error": "Wystąpił błąd podczas zapisywania danych",
     "record-updated-correctly": "Rekord zaktualizowany poprawnie.",
     "recreate-system-integrity": "Odtwórz integralność systemu",
-    "rectified-invoice": "Factura rectificativa",
+    "rectified-invoice": "Faktura korygująca",
     "rectified-invoice-p": "Faktury to dokumenty handlowe i podlegają pewnym ograniczeniom prawny. Nie mogą zostać usunięte ani zmodyfikowane. Dozwolone są jedynie zwroty pełne lub częściowe. Skorzystaj z tego formularza, aby dokonać zwrotu tej faktury.",
     "rectified-invoices": "Faktury korygujące",
     "rectifying": "Korekta",
@@ -1290,7 +1290,7 @@
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Faktury z roku '%exercise%' zostały poprawnie ponumerowane",
     "repeat-new-password": "Powtórz hasło",
-    "repeat-password": "Repetir contraseña",
+    "repeat-password": "Powtórz hasło",
     "reply": "Odpowiedź",
     "report": "Raport",
     "report-grouping-account": "Grupowanie według kont",
@@ -1483,7 +1483,7 @@
     "support": "Wsparcie",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Subcuenta impuesto soportado",
-    "surcharge": "Recargo",
+    "surcharge": "Dopłata",
     "surname": "Nazwiska",
     "suspended": "Zawieszony",
     "swift": "SWIFT\/BIC",
@@ -1540,7 +1540,7 @@
     "to-report": "Zgłosić",
     "today": "Dzisiaj",
     "total": "Razem",
-    "total-amount": "Suma total",
+    "total-amount": "Suma całkowita",
     "total-cost": "Całkowity koszt",
     "total-purchases": "Całkowite zakupy",
     "total-sales": "Całkowita sprzedaż",
@@ -1580,9 +1580,9 @@
     "unit-purchase-price": "Cena zakupu jednostkowa",
     "unit-sale-price": "Cena sprzedaży jednostkowej",
     "unlimited": "Sin límites",
-    "unlink": "Desvincular",
+    "unlink": "Odłącz",
     "unlink-file": "Odłącz plik",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "Instalacja została pomyślnie usunięta z rejestru.",
     "unlock-entry": "Odblokować",
     "unpaid": "Nieopłacone",
     "until-accounting-entry": "Hasta asiento",
@@ -1596,7 +1596,7 @@
     "updater": "Aktualizacja",
     "updates-available": "Dostępne aktualizacje",
     "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
-    "updating-attached-relations": "Aktualizowanie powiązań załączonych plików",
+    "updating-attached-relations": "Aktualizowanie powiązań z załączonymi plikami",
     "upload-file": "Prześlij plik",
     "uploaded-at": "Cargado en",
     "url": "Adres URL",
