--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1167,7 +1167,7 @@
     "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
     "points": "Pontos",
     "points-of-interest": "Pontos de interesse",
-    "port": "Porta",
+    "port": "Porto",
     "position": "Cargo",
     "positive-balance": "Saldo positivo",
     "post-office-box": "Caixa postal",
