--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -549,7 +549,7 @@
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
     "error-updating-product-stock": "Erro ao atualizar o estoque do produto",
     "errors": "Erros",
-    "es_EC": "es_EC",
+    "es_EC": "Espanhol (Equador)",
     "es-tax-exception-e1": "E",
     "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
     "es-tax-exception-e3": "Espanha: exceção pelo artigo 22 da Lei do IVA",
@@ -821,7 +821,7 @@
     "journals": "Diários",
     "july": "Julho",
     "june": "Junho",
-    "justified": "justified",
+    "justified": "Justificado",
     "key-google-maps": "Chave do Google Maps",
     "keys": "Chaves",
     "lang-code": "Código de idioma",
@@ -1143,7 +1143,7 @@
     "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
     "php-support-end": "p",
     "physical-stock": "Estoque físico",
-    "picking": "Preparação",
+    "picking": "Separação",
     "plan": "Plano",
     "please-enter-value": "Por favor insira um valor",
     "plugin": "Plugar",
@@ -1192,7 +1192,7 @@
     "print-list-of-records": "Imprimir lista de registros",
     "print-price": "Imprimir preço",
     "print-quantity": "Imprimir quantidade",
-    "printed": "Printed",
+    "printed": "Imprimido",
     "printing-format": "Formato de impressão",
     "printing-formats": "Formatos de impressão",
     "priority": "Prioridade",
