Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -24,7 +24,7 @@
     "accounting": "Księgowość",
     "accounting-accounts": "Konta księgowe",
     "accounting-balance": "Saldo księgowe",
-    "accounting-balances": "Balances",
+    "accounting-balances": "Salda",
     "accounting-concept": "Koncepcja księgowa",
     "accounting-data-missing": "Nie znaleziono planu kont dla ćwiczenia %exerciseName%",
     "accounting-date": "Fecha de asiento",
@@ -115,7 +115,7 @@
     "are-you-sure": "Tego nie można cofnąć. Czy na pewno chcesz kontynuować?",
     "are-you-sure-action": "Ta akcja wymaga potwierdzenia. Czy na pewno chcesz kontynuować?",
     "asset": "Aktywa",
-    "assigned": "Asignado",
+    "assigned": "Przydzielony",
     "attached-file": "Załączony plik",
     "attached-files": "Pliki załączone",
     "attribute": "Atrybut",
@@ -273,7 +273,7 @@
     "commission": "Prowizja",
     "commission-general-info": "Informacje ogólne dotyczące prowizji stosowanej przy sprzedaży produktów. Zastosowany zostanie procent z najbardziej restrykcyjnymi lub konkretnymi warunkami informowanymi.",
     "commission-settlement": "Rozliczenie prowizji %code%",
-    "commissions": "Comisiones",
+    "commissions": "Prowizje",
     "common-data": "Dane wspólne",
     "common-error": "Błąd",
     "companies": "Firmy",
@@ -332,7 +332,7 @@
     "create-estimation": "Utwórz szacunek",
     "create-invoice": "Utwórz fakturę",
     "create-new-record": "Utwórz nowy wpis",
-    "created": "Creado",
+    "created": "Utworzono",
     "created-by": "Utworzone przez",
     "created-default-admin-account": "Utworzono użytkownika %nick% z hasłem %pass%",
     "creation-date": "Data utworzenia",
@@ -630,7 +630,7 @@
     "first-steps": "Pierwsze kroki",
     "first-trimester": "Pierwszy trymestr",
     "fiscal-data": "Dane fiskalne",
-    "fiscal-exercise": "Ejercicio fiscal",
+    "fiscal-exercise": "Rok podatkowy",
     "fiscal-id": "Id. Fiskalny",
     "fiscal-number": "Numer fiskalny",
     "fixed-value": "Wartość stała",
@@ -652,7 +652,7 @@
     "formula-to-apply": "Formuła do zastosowania",
     "fourth-quarter": "4. kwartał",
     "fourth-trimester": "Czwarty kwartał",
-    "free": "Gratis",
+    "free": "Darmowy",
     "friday": "Piątek",
     "from": "Od",
     "from-accounting-entry": "Od pozycji",
@@ -1150,7 +1150,7 @@
     "plugin-deleted": "Wtyczka %pluginName% została pomyślnie usunięta.",
     "plugin-disabled": "Wtyczka %pluginName% została pomyślnie wyłączona.",
     "plugin-enabled": "Wtyczka %pluginName% została pomyślnie włączona.",
-    "plugin-file-too-big": "Ten serwer nie pozwala na przesyłanie plików większych niż %size% MB. Proszę zwiększyć maksymalny rozmiar przesyłanego pliku w PHP lub skopiuj plik do folderu wtyczek.",
+    "plugin-file-too-big": "Ten serwer nie pozwala na przesyłanie plików większych niż %size% MB. Proszę zwiększyć maksymalny rozmiar przesyłanego pliku w PHP lub skopiować plik do folderu wtyczek.",
     "plugin-installation-disabled": "Instalacja wtyczek jest wyłączona na tym serwerze.",
     "plugin-installed": "Plugin '%pluginName%' zainstalowany",
     "plugin-need-update": "Wtyczka %plugin% będzie wymagać aktualizacji, aby działała z nową wersją FacturaScripts.",
@@ -1189,7 +1189,7 @@
     "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Drukuj wszystkie rekordy",
     "print-export-options": "Opcje drukowania i eksportu",
-    "print-list-of-records": "Imprimir lista de registros",
+    "print-list-of-records": "Drukuj listę rekordów",
     "print-price": "Drukuj ceny",
     "print-quantity": "Drukuj ilość",
     "printed": "Wydrukowane",
@@ -1482,7 +1482,7 @@
     "suppliers": "Dostawcy",
     "support": "Wsparcie",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
-    "supported-tax-subaccount": "Subcuenta impuesto soportado",
+    "supported-tax-subaccount": "Subkonto podatku odliczonego",
     "surcharge": "Dopłata",
     "surname": "Nazwiska",
     "suspended": "Zawieszony",
@@ -1491,7 +1491,7 @@
     "table": "Tabela",
     "table-checked": "Tabela %tableName% została sprawdzona.",
     "table-not-found": "Tabela %tableName% nie znaleziona!",
-    "table-size": "Tamaño de la tabla",
+    "table-size": "Rozmiar tabeli",
     "tables": "Tabele",
     "task": "Zadanie",
     "tasks": "Zadania",
@@ -1585,7 +1585,7 @@
     "unlink-install-ok": "Instalacja została pomyślnie usunięta z rejestru.",
     "unlock-entry": "Odblokować",
     "unpaid": "Nieopłacone",
-    "until-accounting-entry": "Hasta asiento",
+    "until-accounting-entry": "Do wpisu księgowego",
     "until-date": "Do",
     "until-subaccount": "Do subkonta",
     "update": "Aktualizować",
@@ -1598,7 +1598,7 @@
     "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
     "updating-attached-relations": "Aktualizowanie powiązań z załączonymi plikami",
     "upload-file": "Prześlij plik",
-    "uploaded-at": "Cargado en",
+    "uploaded-at": "Załadowano w",
     "url": "Adres URL",
     "use-gaps": "Użyj luk",
     "use-holes-invoices-esp": "Jeśli odznaczysz używanie otworów w fakturach i usuniesz którąś, lukę pozostanie w fakturowaniu i będziesz mieć problemy z urzędem skarbowym",
