--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1265,7 +1265,7 @@
     "refunds": "Reembolsos",
     "register": "Registar",
     "register-install-ad": "Registre a instalação do FacturaScripts",
-    "register-install-ad-p": "Se você registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que permite baixar um dos nossos plugins exclusivos. Além disso, nos ajuda a obter estatísticas das versões do core e do PHP.",
+    "register-install-ad-p": "Se você registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que permite baixar um dos nossos plugins exclusivos. Além disso, nos ajuda a obter estatísticas das versões do núcleo e do PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
