--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1359,7 +1359,7 @@
     "sent-a-video": "Enviou um vídeo",
     "sent-message-by": "Enviado por %nick% em %date%",
     "sepa-suffix": "Sufixo SEPA",
-    "september": "Septiembre",
+    "september": "Setembro",
     "sequences": "Sequências",
     "serial-number": "Número de Série",
     "serie": "Série",
