Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -650,7 +650,7 @@
     "formula-cost-price": "prezzo di costo + x% + y",
     "formula-sale-price": "formula-prezzo-vendita",
     "formula-to-apply": "Formula da applicare",
-    "fourth-quarter": "4º trimestre",
+    "fourth-quarter": "4° trimestre",
     "fourth-trimester": "Quarto trimestre",
     "free": "Gratuito",
     "friday": "Venerdì",
