--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -336,7 +336,7 @@
     "created-by": "Utworzone przez",
     "created-default-admin-account": "Utworzono użytkownika %nick% z hasłem %pass%",
     "creation-date": "Data utworzenia",
-    "credit": "Haber",
+    "credit": "Kredyt",
     "crm": "CRM",
     "cron-job": "Zadanie cykliczne",
     "cron-timeout": "Cron został zatrzymany, aby nie przekroczyć maksymalnego czasu wykonania PHP. Proszę, uruchom cron z terminala, aby uniknąć tego ograniczenia.",
@@ -542,7 +542,7 @@
     "error-deleting-lines": "Błąd podczas usuwania linii",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Błąd w pliku XML %fileName%",
-    "error-processing-xmlview": "Error procesando el XML de la vista, el archivo '%fileName%' no existe o esta mal formado",
+    "error-processing-xmlview": "Błąd przetwarzania XML widoku, plik '%fileName%' nie istnieje lub jest źle sformułowany",
     "error-reading-file": "Error al leer el archivo '%fileName%'",
     "error-saving-lines": "Bład podczas zapisywania linii",
     "error-saving-stock": "Błąd podczas zapisywania zapasów!",
@@ -1095,7 +1095,7 @@
     "page-total-amount": "Łącznie na stronie",
     "pagename": "Nazwa strony",
     "pages": "Strony",
-    "paid": "Pagado",
+    "paid": "Zapłacono",
     "paid-or-unpaid": "Opłacone lub nieopłacone",
     "paid-receipts-prevent-action": "Nie można wykonać tej akcji, mając opłacone paragon",
     "parent": "Rodzic",
@@ -1210,7 +1210,7 @@
     "project": "Projekt",
     "projects": "Projekty",
     "provider-reference": "Referencja dostawcy",
-    "province": "Provincia",
+    "province": "Prowincja",
     "provinces": "Prowincje",
     "public": "Publiczne",
     "public-key": "Klucz publiczny",
@@ -1263,7 +1263,7 @@
     "refund-amount": "Kwota zwrotu",
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Zwróty",
-    "register": "Registrar",
+    "register": "Zarejestruj",
     "register-install-ad": "Zarejestruj instalację FacturaScripts",
     "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala pobrać jedną z naszych ekskluzywnych wtyczek. Pomaga nam również uzyskać statystyki dotyczące wersji rdzenia i PHP.",
     "register-installation": "Zarejestruj instalację",
@@ -1569,7 +1569,7 @@
     "type-info": "Typ informacji",
     "type-notice": "Typ powiadomienia",
     "type-success": "Typ poprawny",
-    "type-warning": "Tipo advertencia",
+    "type-warning": "Typ ostrzeżenia",
     "unbalance": "Nierównowaga",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Niezweryfikowany",
@@ -1649,7 +1649,7 @@
     "weight": "Waga",
     "which-logs-store": "Jakie logi przechowywać",
     "width": "Szerokość",
-    "wildcard": "Comodín",
+    "wildcard": "Symbol wieloznaczny",
     "wildcard-general-info": "Zostanie zastąpiony odpowiednią wartością",
     "wildcard-title": "Zmienna zastępująca wartość",
     "without-closure": "Bez zamknięcia",
