Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -401,7 +401,7 @@
     "debit": "Debet",
     "debug-mode": "Tryb debugowania",
     "december": "Diciembre",
-    "decimal-separator": "Separador de decimales",
+    "decimal-separator": "Separator dziesiętny",
     "decimals": "Liczby dziesiętne",
     "default": "Domyślnie",
     "default-customer": "Klient domyślny",
@@ -543,7 +543,7 @@
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Błąd w pliku XML %fileName%",
     "error-processing-xmlview": "Błąd przetwarzania XML widoku, plik '%fileName%' nie istnieje lub jest źle sformułowany",
-    "error-reading-file": "Error al leer el archivo '%fileName%'",
+    "error-reading-file": "Błąd podczas odczytu pliku '%fileName%'",
     "error-saving-lines": "Bład podczas zapisywania linii",
     "error-saving-stock": "Błąd podczas zapisywania zapasów!",
     "error-to-innodb": "Błąd podczas konwersji tabeli do InnoDB.",
@@ -576,7 +576,7 @@
     "events": "Wydarzenia",
     "exceptions": "Wyjątki",
     "excess": "Nadmiar",
-    "exclude-invalid": "Excluir inválidos",
+    "exclude-invalid": "Wyklucz nieważne",
     "exclude-valid": "Wyklucz poprawne",
     "exempt": "Zwolniony",
     "exercise": "Ćwiczenie",
@@ -584,7 +584,7 @@
     "exercise-date-range-exists": "Istnieje już ćwiczenie w tym przedziale dat (%start% - %end%)",
     "exercise-not-found": "Ćwiczenie nie znalezione.",
     "exercise-without-accounting-plan": "Ćwiczenie %exercise% nie ma jeszcze planu rachunkowego",
-    "exercises": "Ejercicios",
+    "exercises": "Ćwiczenia",
     "exit": "Wyjdź",
     "expedient": "Akta",
     "expense-subaccount": "Subkonto wydatków",
@@ -742,8 +742,8 @@
     "icon": "Ikona",
     "id": "Id.",
     "idaccount": "Id. Cuenta",
-    "idem-wildcard-info": "Copiar el valor de la linea anterior",
-    "image": "Imagen",
+    "idem-wildcard-info": "Skopiuj wartość z poprzedniego wiersza",
+    "image": "Obraz",
     "images": "Obrazy",
     "images-added-correctly": "%count% zdjęć zostało dodanych poprawnie",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
@@ -826,7 +826,7 @@
     "keys": "Klucze",
     "lang-code": "Kod języka",
     "language": "Język",
-    "languages-ca_ES": "Catalán",
+    "languages-ca_ES": "Kataloński",
     "languages-cs_CZ": "Checo",
     "languages-de_DE": "Niemiecki",
     "languages-en_EN": "Angielski",
@@ -1066,7 +1066,7 @@
     "open": "Otwórz",
     "open-exercise": "Otwórz ćwiczenie",
     "open-tab": "Otwórz w nowej karcie",
-    "opened": "Abierto",
+    "opened": "Otwarty",
     "opening-acounting-completed": "Prawidłowe otwarcie ćwiczenia",
     "opening-operation": "Otwarcie",
     "operation": "Operacja",
@@ -1160,7 +1160,7 @@
     "plugin-not-compatible": "Wtyczka %pluginName% nie jest zgodna z FacturaScripts %version%",
     "plugin-order": "Zamówienie: %num%",
     "plugin-phpversion-error": "Wtyczka %pluginName% wymaga PHP %php% lub nowszego",
-    "plugin-removal-disabled": "La eliminación de plugins está desactivada en este servidor",
+    "plugin-removal-disabled": "Usunięcie wtyczek jest wyłączone na tym serwerze",
     "plugin-unsupported-version": "Wtyczka %pluginName% jest przeznaczona dla FacturaScripts 2017 lub wcześniejszych wersji, ale używasz FacturaScripts %version%",
     "plugin-update": "Aktualizacja wtyczki %pluginName% do wersji %version%",
     "plugins": "Wtyczki",
@@ -1498,7 +1498,7 @@
     "tasks-completed-title": "Zadania ukończone",
     "tasks-component-title": "Zadania",
     "tasks-personal-title": "Zadania osobiste",
-    "tax": "Impuesto",
+    "tax": "Podatek",
     "tax-area": "Obszar podatkowy",
     "tax-areas": "Obszary podatkowe",
     "tax-base": "Podstawa opodatkowania",
@@ -1551,7 +1551,7 @@
     "totallinea-value-error": "Błąd wartości totallinea w linii VAT podatku %taxCode% w fakturze. Prawidłowa wartość: %totalLine%",
     "totals": "Całkowite",
     "town": "Miejscowość",
-    "tracking-code": "Código seguimiento",
+    "tracking-code": "Kod śledzenia",
     "transfer": "Transfer",
     "transfers": "Przesunięcia",
     "transfers-stock": "Transfery zapasów",
