--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -546,7 +546,7 @@
     "error-reading-file": "Erro ao ler o arquivo '%fileName%'",
     "error-saving-lines": "Erro ao salvar as linhas",
     "error-saving-stock": "Erro ao salvar o estoque!",
-    "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
+    "error-to-innodb": "Erro ao converter a tabela para InnoDB.",
     "error-updating-product-stock": "Erro ao atualizar o estoque do produto",
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
@@ -860,7 +860,7 @@
     "last-purchase-price": "último preço de compra",
     "last-quarter": "Último trimestre",
     "last-semester": "Último semestre",
-    "last-trimester": "Último trimestre",
+    "last-trimester": "O último trimestre",
     "last-update": "Última mudança",
     "last-user": "Último usuário",
     "last-week": "A semana passada",
@@ -1517,7 +1517,7 @@
     "test-sendmail-not-implemented": "O teste do controlador de correio sendmail não está implementado",
     "text-color": "Cor do texto",
     "texts": "Textos",
-    "third-quarter": "3º trimestre",
+    "third-quarter": "3.º trimestre",
     "third-trimester": "Terceiro Trimestre",
     "this-last-fortnight": "Nesta última quinzena",
     "this-last-month": "Este último mês",
