--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -860,7 +860,7 @@
     "last-purchase-price": "último-preço-de-compra",
     "last-quarter": "Último trimestre",
     "last-semester": "Último semestre",
-    "last-trimester": "Último trimestre",
+    "last-trimester": "O último trimestre",
     "last-update": "Última atualização",
     "last-user": "Último usuário",
     "last-week": "semana passada",
@@ -889,7 +889,7 @@
     "location": "Localização",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "Bloquear lançamento",
-    "lock-invoice": "Bloquear fatura",
+    "lock-invoice": "Marcar emitida",
     "lock-unlock": "Bloquear-Desbloquear",
     "lock-unlock-account-entry": "Bloquear\/Desbloquear a entrada contábil",
     "locked": "Bloqueado",
@@ -1517,7 +1517,7 @@
     "test-sendmail-not-implemented": "O teste do controlador de e-mail sendmail não está implementado",
     "text-color": "Cor do texto",
     "texts": "Textos",
-    "third-quarter": "3º trimestre",
+    "third-quarter": "3.º trimestre",
     "third-trimester": "Terceiro Trimestre",
     "this-last-fortnight": "Nesta última quinzena",
     "this-last-month": "Os últimos 30 dias",
